renames topics to themes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,10 +16,10 @@
     You don't want anything, you don't need anything, so don't approach with a goal in mind. There is nothing wrong with approaching a beautiful/handsome person, but your intent can be toxic. I keep in mind that I do not know this person, so how can I possibly want something? I approach with no intent to get anything but to give something. My time. I don't expect everyone to want it but I give it. I extend the invitation of friendship. If there is a spark that I feel beyond what is on the surface then I will project my feeling and extend an invitation to join me. At no point do I expect anything from anybody as I wouldn't want anyone to expect something from me.
   </li><br>
 
-</ul> 
+</ul>
 
 <ul>
-  <% @topics.each do |topic| %>
-  <li><%= link_to topic.name, topic_path(topic) %></li>
+  <% @themes.each do |theme| %>
+  <li><%= link_to theme.name, theme_path(theme) %></li>
   <% end %>
 </ul>
