--- a/app/assets/stylesheets/twilio.scss
+++ b/app/assets/stylesheets/twilio.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the twilio controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.help-block {
+	color: white;
+	text-align: center;
+}
+
+.form-group {
+	float: center;
+	width: 25%;
+}
