--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,23 +3,8 @@
 
 <div id="container">
 
-  <ul>
 
-    <h4>Some General Tips:</h4>
-    <li>
-      Everyone... And I mean everyone, is a person capable of hopes, dreams, anxiousness, compassion, etc. everyone has the potential to be your friend. Go out into the world and embrace this idea. Smile at everyone and be open and friendly. Men, women, fat, fit, young, old. It makes no difference. Just get comfortable being comfortable around everyone.
-    </li><br>
-
-    <li>
-      Your mood is contagious. When you are closed off or nervous, those around you respond to these emotions. Learn to be the one who drives the mood of the moment. As you become comfortable and carefree so will the person you are engaged with. Learn to project your mood onto others.
-    </li><br>
-
-    <li>
-      You don't want anything, you don't need anything, so don't approach with a goal in mind. There is nothing wrong with approaching a beautiful/handsome person, but your intent can be toxic. I keep in mind that I do not know this person, so how can I possibly want something? I approach with no intent to get anything but to give something. My time. I don't expect everyone to want it but I give it. I extend the invitation of friendship. If there is a spark that I feel beyond what is on the surface then I will project my feeling and extend an invitation to join me. At no point do I expect anything from anybody as I wouldn't want anyone to expect something from me.
-    </li><br>
-
-  </ul>
-
+  Who are you hanging out with?
   <ul>
     <% @themes.each do |theme| %>
     <li><%= link_to theme.name, theme_path(theme) %></li>
@@ -34,7 +19,3 @@
     </div>
   </div>
 </div>
-
-
-
-
