formats abort button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,11 +11,11 @@
     <% end %>
   </ul>
 
-  <div class="round-button">
-    <div class="round-button-circle">
-      <span class="round-button">
-        <%= link_to "Abort!!", twilio_path, method: :get %>
-      </span>
-    </div>
+
+
+  <div class="btn">
+    <%= link_to "Abort!!", twilio_path, method: :get %>
+
   </div>
+
 </div>
