--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,38 +1,31 @@
-/*some stuff for the abort button*/
-
-.round-button {
-	width:25%;
+.btn {
+  background: #e30d0d;
+  background-image: -webkit-linear-gradient(top, #e30d0d, #140303);
+  background-image: -moz-linear-gradient(top, #e30d0d, #140303);
+  background-image: -ms-linear-gradient(top, #e30d0d, #140303);
+  background-image: -o-linear-gradient(top, #e30d0d, #140303);
+  background-image: linear-gradient(to bottom, #e30d0d, #140303);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 16px;
+  text-decoration: none;
 }
 
-.round-button-circle {
-	width: 100%;
-	height:0;
-	padding-bottom: 100%;
-    border-radius: 50%;
-	border:10px solid #cfdcec;
-    overflow:hidden;
-    
-    background: #4679BD; 
-    box-shadow: 0 0 3px gray;
+.btn:hover {
+  background: #f24b4b;
+  background-image: -webkit-linear-gradient(top, #f24b4b, #140e04);
+  background-image: -moz-linear-gradient(top, #f24b4b, #140e04);
+  background-image: -ms-linear-gradient(top, #f24b4b, #140e04);
+  background-image: -o-linear-gradient(top, #f24b4b, #140e04);
+  background-image: linear-gradient(to bottom, #f24b4b, #140e04);
+  text-decoration: none;
 }
 
-.round-button-circle:hover {
-	background:#30588e;
-}
-
-.round-button a {
-  display:block;
-	float:right;
-	width:100%;
-	padding-top:50%;
-    padding-bottom:50%;
-	line-height:1em;
-	margin-top:-0.5em;
-    
-	text-align:center;
-	color:#e2eaf3;
-    font-family:Verdana;
-    font-size:1.2em;
-    font-weight:bold;
-    text-decoration:none;
+.btn a {
+	color: white;
+	text-decoration: none;
 }
