updates front page to have drop down menu

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,10 +6,13 @@
 
   Who are you hanging out with?
   <ul>
-    <% @themes.each do |theme| %>
-    <li><%= link_to theme.name, theme_path(theme) %></li>
+
+    <%= form_tag method: :get do %>
+    <%= select_tag('theme[name]', options_for_select(@themes.collect{ |theme| [theme.name, theme.id] })) %>
+    <%= submit_tag "Get facts" %>
     <% end %>
   </ul>
+
 
 
 
