--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -11,6 +11,11 @@
     <div class="form-group">
       <input class="form-control" type="text" name="phone" id="phoneNumber" placeholder="(651) 555-7889">
     </div>
+
+    <div class="form-group">
+      <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="10m inutes">
+    </div>
+
     <div id="abort-call">
       <button type="submit" class="btn btn-default">Give Me My ABORT Call</button>
     </div>
@@ -21,3 +26,7 @@
   <%= link_to "Home", root_url %>
 
 </div>
+
+
+
+<!-- call me in x mins -->
