--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="form-group">
-      <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="10m inutes">
+      <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="currently now only">
     </div>
 
     <div id="abort-call">
