--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div id="container">
-  <div class="btn">
+  <div class="abort-button">
     <%= link_to "Abort!!", twilio_path, method: :get %>
   </div>
 
