add more info button to themes show page

--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -12,4 +12,5 @@
     Tip:
     <li><%=tip.description %></li>
   </ul>
+  <%= button_to "more info", action: "new", remote: true, theme: {id: @theme.id} %>
 </div>
