--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,12 +1,3 @@
-#container {
-  margin: 0 auto;
-  width:100px;
-}
-
-.form {
-  float: left;
-}
-
 .abort-button {
   background: #e30d0d;
   background-image: -webkit-linear-gradient(top, #e30d0d, #140303);
@@ -22,11 +13,10 @@
   font-size: 20px;
   padding: 10px 20px 10px 16px;
   text-decoration: none;
-  float: right;
+  display: block;
+  margin: 0 auto;
   width: 100px;
-
-
-
+  margin-top: 20px;
 
 }
 
