--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,16 @@
 
 	<%= yield %>
 
+
+	<div class="container-fluid">
+	  <p><strong>Our mission</strong></p>
+	  <p><strong>Careers</strong></p>
+	  <p><strong>Request a theme</strong></p>
+	  <p><strong>Customer Support</strong></p>
+	  <p id="copyright">&copy;2016</p>
+	</div>
+
+
 	</body>
 </html>
 
