still working on it

--- a/app/assets/stylesheets/twilio.scss
+++ b/app/assets/stylesheets/twilio.scss
@@ -1,9 +1,10 @@
 .help-block {
-	color: white;
-	text-align: center;
+	color: black;
+	display: inline;
 }
 
+
 .form-group {
-	float: center;
-	width: 25%;
+	width: 40%;
 }
+
