--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -1,11 +1,10 @@
-<div class="container">
+<div id="container">
   <form id="contactform" role="form" action="#" method="POST">
-
     <div class="form-group">
-      <h3>ABORT!!</h3>
-      <p class="help-block">
-        If it all goes south, schedule a call and we can give you a nice excuse to get out of town. (calls immdiately right now)
-      </p>
+        <h3>ABORT!!</h3>
+        <p class="help-block">
+          If it all goes south, schedule a call and we can give you a nice excuse to get out of town. (calls immdiately right now)
+        </p>
     </div>
 
     <div class="form-group">
@@ -19,11 +18,14 @@
     <div id="abort-call">
       <button type="submit" class="btn btn-default">Give Me My ABORT Call</button>
     </div>
+
+    <%= link_to "Home", root_url %>
+
   </form>
+
 </div>
 
-<div class="home">
-  <%= link_to "Home", root_url %>
+  
 
 </div>
 
