--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-
 @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans);
 
 body {
@@ -21,6 +5,7 @@ body {
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 14px;
 }
+
 
 a {
   color: #0000FF;
@@ -37,7 +22,7 @@ h1 {
 
 h3 {
 	text-align: center;
-	color: white;
+	color: black;
 }
 
 #container {
