--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,3 +22,11 @@
   <div class="abort-button">
     <%= link_to "Abort!!", twilio_path, method: :get %>
   </div>
+
+  <div class="container-fluid">
+    <p><strong>Our mission</strong></p>
+    <p><strong>Careers</strong></p>
+    <p><strong>Request a theme</strong></p>
+    <p><strong>Customer Support</strong></p>
+    <p id="copyright">&copy;2016</p>
+  </div>
