--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
 </div>
 
   <div class="abort-button">
-    <%= link_to "Abort!!", twilio_path, method: :get %>
+    <%= link_to "Abort!", twilio_path, method: :get %>
   </div>
 
   <div class="container-fluid">
