--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,7 @@ h3 {
   padding: 20px 40px;
   border: solid 1px black;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .clear {
@@ -52,3 +53,41 @@ h3 {
   color: white;
 }
 
+
+.abort-button {
+  background: #e30d0d;
+  background-image: -webkit-linear-gradient(top, #e30d0d, #140303);
+  background-image: -moz-linear-gradient(top, #e30d0d, #140303);
+  background-image: -ms-linear-gradient(top, #e30d0d, #140303);
+  background-image: -o-linear-gradient(top, #e30d0d, #140303);
+  background-image: linear-gradient(to bottom, #e30d0d, #140303);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 16px;
+  text-decoration: none;
+  width: 100px;
+  margin-bottom: 25px;
+
+  display: block;
+  margin: 0 auto;
+}
+
+.abort-button:hover {
+  background: #f24b4b;
+  background-image: -webkit-linear-gradient(top, #f24b4b, #140e04);
+  background-image: -moz-linear-gradient(top, #f24b4b, #140e04);
+  background-image: -ms-linear-gradient(top, #f24b4b, #140e04);
+  background-image: -o-linear-gradient(top, #f24b4b, #140e04);
+  background-image: linear-gradient(to bottom, #f24b4b, #140e04);
+  text-decoration: none;
+}
+
+.abort-button a {
+  color: white;
+  text-decoration: none;
+  margin-left: 5px;
+}
