--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,14 +19,14 @@
   </ul>
 </div>
 
-  <div class="abort-button">
-    <%= link_to "Abort!", twilio_path, method: :get %>
-  </div>
+<div class="abort-button">
+  <%= link_to "Abort!", twilio_path, method: :get %>
+</div>
 
-  <div class="container-fluid">
-    <p><strong>Our mission</strong></p>
-    <p><strong>Careers</strong></p>
-    <p><strong>Request a theme</strong></p>
-    <p><strong>Customer Support</strong></p>
-    <p id="copyright">&copy;2016</p>
-  </div>
+<div class="container-fluid">
+  <p><strong><%= link_to "Our Mission", mission_path %></strong></p>
+  <p><strong><%= link_to "Request a Theme", request_form_path %></strong></p>
+  <p><strong><%= link_to "Careers", careers_path %></strong></p>
+  <p><strong><%= link_to "Customer Support", support_path %></strong></p>
+  <p id="copyright">&copy;2016</p>
+</div>
