--- a/app/views/welcome/mission.html.erb
+++ b/app/views/welcome/mission.html.erb
@@ -2,7 +2,7 @@
 	
 <h1>Our Mission:</h1>
 
-<h2>Here at Small Talk, we believe in making awkward people comfortable.</h2>
+<h2>Here at Small Talk, we strive to remove the awkwardness from social events, <br>and allow YOU to become the life of the party.</h2>
 
-<img src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" alt="shining">
+<img src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
 
