--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,14 @@
 	</head>
 
 	<body>
+		<% if flash[:error] %>
+    <div>Error: <%= flash[:error] %></div>
+  <% end %>
+
+  <% if flash[:notice] %>
+    <div><%= flash[:notice] %></div>
+  <% end %>
+	
 		<% if logged_in? %>
     Current user is: <%= current_user.name  %>
     <%= link_to "Log Out", sessions_path, method: :delete %>
