--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <% if flash[:notice] %>
     <div><%= flash[:notice] %></div>
   <% end %>
-	
+
 		<% if logged_in? %>
     Current user is: <%= current_user.name  %>
     <%= link_to "Log Out", sessions_path, method: :delete %>
@@ -43,4 +43,21 @@
 
 
 	</body>
+	<head>
+	<title>Facebook Auth Example</title>
+<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+<%= csrf_meta_tags %>
+</head>
+	<body>
+		<div>
+			<% if current_user %>
+				Signed in as <strong><%= current_user.name%></strong>!
+				<%= link_to "Sign out", signout_path, id: "sign_out" %>
+				<% else %>
+				<%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+				<%end%>
+			</div>
+		</body>
+
 </html>
