--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -23,3 +23,18 @@
   </ul>
 
 </div>
+
+<div id="container">
+  <a class="twitter-timeline" height="300px" href="https://twitter.com/smallTalkToMe" data-widget-id="694906938132406272">Tweets by @smallTalkToMe</a>
+  <script>
+    !function(d,s,id){
+      var js,fjs = d.getElementsByTagName(s)[0],
+      p=/^http:/.test(d.location)?'http':'https';
+      if(!d.getElementById(id)){js=d.createElement(s);
+        js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js,fjs);
+      }
+    }
+    (document,"script","twitter-wjs");
+  </script>
+</div>
