--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -20,6 +20,7 @@
     <% tip = @tips.sample %>
     <strong>Tip:</strong>
     <li><%=tip.description %></li>
+    <%= button_to %>
   </ul>
 
 </div>
