--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,22 +2,21 @@
 @import "bootstrap";
 @import "font-awesome";
 
-<!-- Stylesheets -->
-<link href="css/style.css" rel="stylesheet" title="main-css">
-<link href="css/bootstrap-social.css" rel="stylesheet">
+
+@import "style.css";
+@import "bootstrap-social.css";
 @import "animate.min";
 @import "owl.carousel";
 @import "jquery.snippet";
 @import "buttons";
 @import "style-switcher";
 
-<!-- Alternate Stylesheets // choose what you want and remove rest for production -->
 @import "colors/blue";
-//24:29 on video 
-<link rel="alternate stylesheet" type="text/css" href="css/width-full.css" title="width-full">
-<link rel="alternate stylesheet" type="text/css" href="css/width-boxed.css" title="width-boxed">
 
-<!-- Icon Fonts -->
-<link href='css/ionicons.min.css' rel='stylesheet' type='text/css'>
-<!-- Magnific Popup -->
-<link href='css/magnific-popup.css' rel='stylesheet' type='text/css'>
+@import "width-full";
+@import "width-boxed";
+
+
+@import "ionicons.min";
+
+@import "magnific-popup";
