--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -18,10 +18,10 @@
 
 
       <li><%= link_to formatted_title, post_url, target: "_blank" %></li>
-    <% @tip = @tips.sample %>
+    <% tip = @tips.sample %>
     <strong>Tip:</strong>
-    <li><%=@tip.description %></li>
-  
+    <li><%= tip.description %></li>
+
   </ul>
 
 </div>
