--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
         <h3>ABORT!!</h3>
         <p class="help-block">
-          If it all goes south, schedule a call and we can give you a nice excuse to get out of town. (calls immdiately right now)
+          If it all goes south, schedule a call and we can give you a nice excuse to get out of town.
         </p>
     </div>
 
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-group">
-      <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="currently now only">
+      <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="In how many minutes would you like a call?">
     </div>
 
     <div id="abort-call">
@@ -25,7 +25,7 @@
 
 </div>
 
-  
+
 
 </div>
 
