--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
-<p> <%= @user.name %>  </p>
+<p> <%= current_user.name %>  </p>
+<% current_user.tips.each do |tip| %>
+<p><%= tip.description %></p>
+<% end %>
