adds delete button - needs refactoring

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <p> <%= current_user.name %>  </p>
 <% current_user.tips.each do |tip| %>
 <p><%= tip.description %></p>
+<%= button_to "Delete tip", params: {id: tip.id} %>
 <% end %>
